# arqma

./: .gitignore  .gitmodules  .travis.yml  ANONYMITY_NETWORKS.md  CMakeLists.txt  CMakeLists_IOS.txt  CODE_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTING.md.TODO  Docker-rpi  Dockerfile  Doxyfile  LEVIN_PROTOCOL.md  LICENSE  Makefile  OPENSSL_MIGRATION_REPORT.md  PODSUMOWANIE_OSTRZEZEN.md  README.i18n.md  README.md  WERYFIKACJA_KOMPATYBILNOSCI_ZMQ.md  ZEROMQ_MIGRATION_REPORT.md  android-docker  arq-docker  build-all-arch.sh  changelog.txt  gxi-docker  update-submodules.sh  version.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  c-cpp.yml  ccpp.yml  codeql.yml  depends.yml  docker.yml  dockerhub-latest.yml  main.yml
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  DownloadLibZmq.cmake  Doxyfile.in  Doxygen.extra.css.in  FindBacktrace.cmake  FindBerkeleyDB.cmake  FindCcache.cmake  FindHIDAPI.cmake  FindLibUSB.cmake  FindLibunwind.cmake  FindMiniupnpc.cmake  FindPCSC.cmake  FindReadline.cmake  FindUnbound.cmake  Findsodium.cmake  GenVersion.cmake  Version.cmake  test-libusb-version.c  test-protobuf.cpp  test-protobuf.proto  test-static-assert.c  test-static-assert.cpp
contrib/: CMakeLists.txt
contrib/apple/: brew
contrib/depends/: Makefile  README.md  config.site.in  funcs.mk  toolchain.cmake.in
contrib/epee/: CMakeLists.txt  LICENSE.txt
contrib/gitian/: README.md  gitian-build.py  gitian-linux.yml  gitian-osx.yml  gitian-win.yml  symbol-check.py
include/: INode.h  IWallet.h
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in  version.h
src/arqma-mq/: INotifier.h  arqmaMQ.cpp  arqmaMQ.h
src/arqma_mq/: CMakeLists.txt  INotifier.h  arqmaMQ.cpp  arqmaMQ.h  utils.hpp  zmq_handler.cpp  zmq_handler.h
src/arqnet/: CMakeLists.txt  bt_serialize.cpp  bt_serialize.h  common.h  conn_matrix.h  sn_network.cpp  sn_network.h
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  db_types.h  locked_txn.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_objects.h  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/blocks/: CMakeLists.txt  blocks.cpp.in  blocks.h
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  arqma.cpp  arqma.h  base58.cpp  base58.h  boost_serialization_helper.h  combinator.cpp  combinator.h  command_line.cpp  command_line.h  common_fwd.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  exp2.cpp  exp2.h  expect.cpp  expect.h  glibc_compat.cpp  hex.h  http_connection.h  i18n.cpp  i18n.h  int-util.h  json_util.h  lock.h  notify.cpp  notify.h  osrb.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  periodic_task.h  (+28 more)
src/config/: README.md  ascii.h  ascii_wallet.h  cli_wallet_helper.h  common.h  cryptonote.h  mainnet.h  seeds.h  stagenet.h  testnet.h
src/crypto/: CMakeLists.txt  aesb.c  blake256.c  blake256.h  c_threads.h  chacha.h  cn_arqma_hash.c  cn_turtle_hash.c  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generic-ops.h  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  initializer.h  keccak.c  keccak.h  oaes_lib.c  oaes_lib.h  random.c  random.h  rx-slow-hash.c  skein_port.h  slow-hash.c  tree-hash.c
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blobdatatype.h  connection_context.cpp  connection_context.h  cryptonote_basic.cpp  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_format_utils_basic.cpp  cryptonote_stat_info.h  difficulty.cpp  difficulty.h  events.h  fwd.h  hardfork.cpp  hardfork.h  merge_mining.cpp  merge_mining.h  miner.cpp  miner.h  subaddress_index.h  tx_extra.h  txtypes.h  verification_context.h
src/cryptonote_core/: CMakeLists.txt  ascii.h  blockchain.cpp  blockchain.h  blockchain_storage_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  miner.cpp  miner.h  quorum_cop.cpp  quorum_cop.h  service_node_deregister.cpp  service_node_deregister.h  service_node_list.cpp  service_node_list.h  service_node_quorum_cop.cpp  service_node_quorum_cop.h  service_node_rules.cpp  service_node_rules.h  service_node_swarm.cpp  service_node_swarm.h  service_node_voting.cpp  service_node_voting.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h
src/cryptonote_protocol/: CMakeLists.txt  arqnet.cpp  arqnet.h  block_queue.cpp  block_queue.h  core_protocol_instantiation.cpp  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  levin_notify.cpp  levin_notify.h  p2p_net_node_instantiation.cpp
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  protocol.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: CMakeLists.txt  daemonizer.h  posix_daemonizer.inl  posix_fork.cpp  posix_fork.h  windows_daemonizer.inl  windows_service.cpp  windows_service.h  windows_service_runner.h
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  object_sizes.cpp
src/device/: CMakeLists.txt  device.cpp  (+10 more)
tests/: CMakeLists.txt  README.md  cryptolib.pl  cryptotest.pl  hash-target.cpp  io.h
translations/: CMakeLists.txt  galaxia_ja.ts  generate_translations_header.c
utils/: arqnet-ping.py  generate-quorum-matrix.py
(+491 files in other folders)
